--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,21 @@
 
 <head>
   <meta charset="UTF-8" />
+  <style>
+    html,
+    body,
+    #root {
+      height: 100%;
+      width: 100%;
+      margin: 0;
+      box-sizing: border-box;
+    }
+  </style>
 
 </head>
 
 <body>
-  <div id="root" style="width: 100%; height: 100%;" />
+  <div id="root" />
 
 </body>
 
